--- a/mineracaoyoutube.ipynb
+++ b/mineracaoyoutube.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOHcCDcPYF5Uc2YkYkwnLcQ",
+      "authorship_tag": "ABX9TyPUjnjEI91yU5tgadaS9zAk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -428,6 +428,318 @@
           "name": "stdout",
           "text": [
             "Playwright OK — Reddit carregou\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import asyncio\n",
+        "import nest_asyncio\n",
+        "import csv\n",
+        "from datetime import datetime\n",
+        "from playwright.async_api import async_playwright\n",
+        "\n",
+        "nest_asyncio.apply()\n",
+        "\n",
+        "SUBREDDITS = [\n",
+        "    \"nextfuckinglevel\",\n",
+        "    \"interestingasfuck\",\n",
+        "    \"BeAmazed\",\n",
+        "    \"Damnthatsinteresting\",\n",
+        "    \"Unexpected\",\n",
+        "    \"oddlysatisfying\",\n",
+        "    \"PublicFreakout\"\n",
+        "]\n",
+        "\n",
+        "MIN_UPVOTES = 500\n",
+        "MAX_POSTS = 25\n",
+        "\n",
+        "def parse_upvotes(score):\n",
+        "    if not score:\n",
+        "        return 0\n",
+        "    score = score.lower()\n",
+        "    if \"k\" in score:\n",
+        "        return int(float(score.replace(\"k\", \"\")) * 1000)\n",
+        "    try:\n",
+        "        return int(score)\n",
+        "    except:\n",
+        "        return 0\n",
+        "\n",
+        "async def scrape_reddit():\n",
+        "    results = []\n",
+        "\n",
+        "    async with async_playwright() as p:\n",
+        "        browser = await p.chromium.launch(\n",
+        "            headless=True,\n",
+        "            args=[\"--no-sandbox\", \"--disable-setuid-sandbox\"]\n",
+        "        )\n",
+        "\n",
+        "        context = await browser.new_context(\n",
+        "            user_agent=\"Mozilla/5.0 (Windows NT 10.0; Win64; x64)\"\n",
+        "        )\n",
+        "\n",
+        "        page = await context.new_page()\n",
+        "\n",
+        "        for sub in SUBREDDITS:\n",
+        "            url = f\"https://www.reddit.com/r/{sub}/top/?t=week\"\n",
+        "            print(f\"🔎 {sub}\")\n",
+        "\n",
+        "            await page.goto(url, wait_until=\"domcontentloaded\", timeout=60000)\n",
+        "            await page.wait_for_timeout(3000)\n",
+        "\n",
+        "            posts = await page.query_selector_all(\"shreddit-post\")\n",
+        "\n",
+        "            for post in posts[:MAX_POSTS]:\n",
+        "                try:\n",
+        "                    title = await post.get_attribute(\"post-title\")\n",
+        "                    score = parse_upvotes(await post.get_attribute(\"score\"))\n",
+        "                    permalink = await post.get_attribute(\"permalink\")\n",
+        "\n",
+        "                    if score < MIN_UPVOTES:\n",
+        "                        continue\n",
+        "\n",
+        "                    link = await post.query_selector(\"a[href*='v.redd.it'], a[href*='tiktok'], a[href*='instagram']\")\n",
+        "                    if not link:\n",
+        "                        continue\n",
+        "\n",
+        "                    video_url = await link.get_attribute(\"href\")\n",
+        "\n",
+        "                    results.append({\n",
+        "                        \"subreddit\": sub,\n",
+        "                        \"title\": title,\n",
+        "                        \"upvotes\": score,\n",
+        "                        \"post_url\": f\"https://www.reddit.com{permalink}\",\n",
+        "                        \"video_url\": video_url\n",
+        "                    })\n",
+        "\n",
+        "                except:\n",
+        "                    pass\n",
+        "\n",
+        "        await browser.close()\n",
+        "\n",
+        "    return results\n",
+        "\n",
+        "\n",
+        "data = asyncio.run(scrape_reddit())\n",
+        "\n",
+        "filename = f\"reddit_viral_videos_{datetime.now().strftime('%Y%m%d_%H%M')}.csv\"\n",
+        "\n",
+        "with open(filename, \"w\", newline=\"\", encoding=\"utf-8\") as f:\n",
+        "    writer = csv.DictWriter(f, fieldnames=data[0].keys())\n",
+        "    writer.writeheader()\n",
+        "    writer.writerows(data)\n",
+        "\n",
+        "print(f\"✅ {len(data)} vídeos salvos em {filename}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 332
+        },
+        "id": "RzGPSfZ91vXN",
+        "outputId": "8d12818d-688e-4d6a-e2c0-a529046a41c0"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "🔎 nextfuckinglevel\n",
+            "🔎 interestingasfuck\n",
+            "🔎 BeAmazed\n",
+            "🔎 Damnthatsinteresting\n",
+            "🔎 Unexpected\n",
+            "🔎 oddlysatisfying\n",
+            "🔎 PublicFreakout\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "IndexError",
+          "evalue": "list index out of range",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-161325650.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     91\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"w\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnewline\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"utf-8\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 93\u001b[0;31m     \u001b[0mwriter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDictWriter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfieldnames\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     94\u001b[0m     \u001b[0mwriter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwriteheader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     95\u001b[0m     \u001b[0mwriter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwriterows\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if not data:\n",
+        "    print(\"⚠️ Nenhum vídeo encontrado com os filtros atuais.\")\n",
+        "else:\n",
+        "    filename = f\"reddit_viral_videos_{datetime.now().strftime('%Y%m%d_%H%M')}.csv\"\n",
+        "\n",
+        "    with open(filename, \"w\", newline=\"\", encoding=\"utf-8\") as f:\n",
+        "        writer = csv.DictWriter(f, fieldnames=data[0].keys())\n",
+        "        writer.writeheader()\n",
+        "        writer.writerows(data)\n",
+        "\n",
+        "    print(f\"✅ {len(data)} vídeos salvos em {filename}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bpN78D6a2Te4",
+        "outputId": "cfc97123-e0c7-4fd8-c0df-18d709045cd8"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "⚠️ Nenhum vídeo encontrado com os filtros atuais.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import asyncio\n",
+        "import nest_asyncio\n",
+        "import csv\n",
+        "from datetime import datetime\n",
+        "from playwright.async_api import async_playwright\n",
+        "\n",
+        "nest_asyncio.apply()\n",
+        "\n",
+        "# =====================\n",
+        "# CONFIGURAÇÕES\n",
+        "# =====================\n",
+        "SUBREDDITS = [\n",
+        "    \"nextfuckinglevel\",\n",
+        "    \"interestingasfuck\",\n",
+        "    \"BeAmazed\",\n",
+        "    \"Damnthatsinteresting\",\n",
+        "    \"Unexpected\",\n",
+        "    \"oddlysatisfying\",\n",
+        "    \"PublicFreakout\"\n",
+        "]\n",
+        "\n",
+        "MIN_UPVOTES = 500\n",
+        "MAX_POSTS = 25\n",
+        "\n",
+        "# =====================\n",
+        "# FUNÇÕES AUXILIARES\n",
+        "# =====================\n",
+        "def parse_upvotes(score):\n",
+        "    if not score:\n",
+        "        return 0\n",
+        "    score = score.lower()\n",
+        "    if \"k\" in score:\n",
+        "        return int(float(score.replace(\"k\", \"\")) * 1000)\n",
+        "    try:\n",
+        "        return int(score)\n",
+        "    except:\n",
+        "        return 0\n",
+        "\n",
+        "# =====================\n",
+        "# SCRAPER\n",
+        "# =====================\n",
+        "async def scrape_reddit():\n",
+        "    results = []\n",
+        "\n",
+        "    async with async_playwright() as p:\n",
+        "        browser = await p.chromium.launch(\n",
+        "            headless=True,\n",
+        "            args=[\"--no-sandbox\", \"--disable-setuid-sandbox\"]\n",
+        "        )\n",
+        "\n",
+        "        context = await browser.new_context(\n",
+        "            user_agent=\"Mozilla/5.0 (Windows NT 10.0; Win64; x64)\"\n",
+        "        )\n",
+        "\n",
+        "        page = await context.new_page()\n",
+        "\n",
+        "        for sub in SUBREDDITS:\n",
+        "            url = f\"https://www.reddit.com/r/{sub}/top/?t=week\"\n",
+        "            print(f\"🔎 {sub}\")\n",
+        "\n",
+        "            await page.goto(url, wait_until=\"domcontentloaded\", timeout=60000)\n",
+        "            await page.wait_for_timeout(3000)\n",
+        "\n",
+        "            posts = await page.query_selector_all(\"shreddit-post\")\n",
+        "\n",
+        "            for post in posts[:MAX_POSTS]:\n",
+        "                try:\n",
+        "                    title = await post.get_attribute(\"post-title\")\n",
+        "                    score = parse_upvotes(await post.get_attribute(\"score\"))\n",
+        "                    permalink = await post.get_attribute(\"permalink\")\n",
+        "\n",
+        "                    if score < MIN_UPVOTES:\n",
+        "                        continue\n",
+        "\n",
+        "                    link = await post.query_selector(\n",
+        "                        \"a[href*='v.redd.it'], a[href*='tiktok'], a[href*='instagram']\"\n",
+        "                    )\n",
+        "                    if not link:\n",
+        "                        continue\n",
+        "\n",
+        "                    video_url = await link.get_attribute(\"href\")\n",
+        "\n",
+        "                    results.append({\n",
+        "                        \"subreddit\": sub,\n",
+        "                        \"title\": title,\n",
+        "                        \"upvotes\": score,\n",
+        "                        \"post_url\": f\"https://www.reddit.com{permalink}\",\n",
+        "                        \"video_url\": video_url\n",
+        "                    })\n",
+        "\n",
+        "                except:\n",
+        "                    pass\n",
+        "\n",
+        "        await browser.close()\n",
+        "\n",
+        "    return results\n",
+        "\n",
+        "# =====================\n",
+        "# EXECUÇÃO\n",
+        "# =====================\n",
+        "data = asyncio.run(scrape_reddit())\n",
+        "\n",
+        "if not data:\n",
+        "    print(\"⚠️ Nenhum vídeo encontrado com os filtros atuais.\")\n",
+        "else:\n",
+        "    filename = f\"reddit_viral_videos_{datetime.now().strftime('%Y%m%d_%H%M')}.csv\"\n",
+        "\n",
+        "    with open(filename, \"w\", newline=\"\", encoding=\"utf-8\") as f:\n",
+        "        writer = csv.DictWriter(f, fieldnames=data[0].keys())\n",
+        "        writer.writeheader()\n",
+        "        writer.writerows(data)\n",
+        "\n",
+        "    print(f\"✅ {len(data)} vídeos salvos em {filename}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QSKhSpXR3QmZ",
+        "outputId": "55d1fbdc-d176-42c5-ee92-d50f819d0941"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "🔎 nextfuckinglevel\n",
+            "🔎 interestingasfuck\n",
+            "🔎 BeAmazed\n",
+            "🔎 Damnthatsinteresting\n",
+            "🔎 Unexpected\n",
+            "🔎 oddlysatisfying\n",
+            "🔎 PublicFreakout\n",
+            "⚠️ Nenhum vídeo encontrado com os filtros atuais.\n"
           ]
         }
       ]
